Pending changes in the mainline
===============================

* Added configuration option "STL.3DHOP.CanvasStyle" to change the
  background of the 3DHOP viewer


Version 1.2 (2024-06-16)
========================

* Added 3DHOP viewer (version 4.3) for Nexus models
* Upgraded Nexus viewer to version 4.3 (Nexus 2020)


Version 1.1 (2024-05-22)
========================

=> Minimum SDK version: 1.2.0 <=

* Support for DICOM-ization of adaptive 3D models in the Nexus format:
  https://vcg.isti.cnr.it/nexus/ (version 4.2 - Nexus 2018)


Version 1.0 (2024-04-06)
========================

=> Minimum SDK version: 1.0.0 <=

* Initial release
* Embeds Online3DViewer 0.12.0